# brain-activity-classification

./: .gitignore  README.md  nbc_with_pca.ipynb  pyproject.toml
brain_activity_classification/: main.ipynb
dataset/: README.md
