[tool.poetry]
name = "brain-activity-classification"
version = "0.1.0"
description = ""
authors = ["Filip Juza <filip.juza@placewise.com>"]
readme = "README.md"
packages = [{include = "brain_activity_classification"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
