[tool.poetry]
name = "brain-activity-classification"
version = "0.1.0"
description = ""
authors = ["Filip Juza <filip.juza@placewise.com>"]
readme = "README.md"
packages = [{include = "brain_activity_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
nilearn = "^0.10.2"
jupyter = "^1.0.0"
tsfresh = "^0.20.1"
lightgbm = "^4.2.0"
seaborn = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
